--- a/src/components/MyNavBar/MyNavBar.css
+++ b/src/components/MyNavBar/MyNavBar.css
@@ -30,7 +30,8 @@
     position: relative;
     background-color: azure;
     min-width: 100px;
-    height: 20px;
+    height: 40px;
+    line-height: 40px;
     text-align: center;
     font-size: 14px;
     font-weight: bold;
@@ -40,19 +41,18 @@
     position: absolute;
     height: 60px;
     width: 100px;
-    top: -20px;
+    top: -10px;
     left: 0px;
-    padding-top: 18px;
+    padding-top: 10px;
 }
 
 .nav-drop-down {
     position: absolute;
-    background-color: aliceblue;
     height: 60px;
     width: 100px;
-    top: -20px;
+    top: -10px;
     left: 0px;
-    padding-top: 18px;
+    padding-top: 10px;
 }
 
 .drop-down-menu {
@@ -68,55 +68,34 @@
     display: none;
 }
 
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 991px) {
     .nav-links {
         display: flex;
-        width: 40vw;
-        min-width: 300px;
-        height: 60px;
+        width: 100%;
+        height: auto;
         justify-content: space-around;
         align-items: center;
         background-color: bisque;
+        flex-direction: column;
     }
 
     .nav-links-items {
         position: relative;
         background-color: azure;
         margin: 20px;
-        min-width: 60px;
-        height: 20px;
+        min-width: 100px;
+        height: 40px;
+        line-height: 40px;
         text-align: center;
+        font-size: 14px;
+        font-weight: bold;
     }
 
     .drop-down-menu {
-        position: absolute;
-        top: 60px;
-        left: -200px;
+        left: -125%;
         height: 70vh;
-        width: 60vw;
+        width: 350%;
         background-color: red;
-    }
-
-    .drop-down-menu-hidden {
-        display: none;
-    }
-
-    .nav-drop-down-hidden {
-        position: absolute;
-        height: 60px;
-        width: 100px;
-        top: -20px;
-        left: 0px;
-        padding-top: 18px;
-    }
-
-    .nav-drop-down {
-        position: absolute;
-        background-color: aliceblue;
-        height: 60px;
-        width: 100px;
-        top: -20px;
-        left: 0px;
-        padding-top: 18px;
+        z-index: 100;
     }
 }
