--- a/src/components/functionality/SearchBar/SearchBar.css
+++ b/src/components/functionality/SearchBar/SearchBar.css
@@ -3,7 +3,7 @@
 }
 
 .search-form input {
-    border: none;
+    border: 0.5px solid gray;
     border-radius: 10px;
     padding: 5px;
     padding-right: 20px;
@@ -20,4 +20,11 @@
     position: absolute;
     top: -28px;
     right: 5px;
+}
+
+@media screen and (max-width: 991px) {
+    .search-form {
+        width: 200px;
+        padding: 20px 0px;
+    }
 }
