--- a/src/components/MyNavBar/MyNavBar.css
+++ b/src/components/MyNavBar/MyNavBar.css
@@ -68,6 +68,11 @@
     display: none;
 }
 
+.nav-user-image {
+    width: 40px;
+    height: 100%;
+}
+
 @media screen and (max-width: 991px) {
     .nav-links {
         display: flex;
