--- a/src/components/MyNavBar/MyNavBar.css
+++ b/src/components/MyNavBar/MyNavBar.css
@@ -70,7 +70,7 @@
 
 .nav-user-image {
     width: 40px;
-    height: 100%;
+    height: 40px;
 }
 
 @media screen and (max-width: 991px) {
@@ -102,5 +102,9 @@
         width: 350%;
         background-color: red;
         z-index: 100;
+    }
+
+    .nav-user-margin {
+        width: 80px;
     }
 }
